[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemy - Flower Guy - Walking/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemy - Flower Guy - Walking/sprite_3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy - Flower Guy - Walking/sprite_4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy - Flower Guy - Walking/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemy - Flower Guy - Walking/sprite_1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 21.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 56.0
height = 320.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.5, 24 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.5 )
shape = SubResource( 1 )

[node name="Player_Checker" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Checker"]
position = Vector2( 1, -24 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Player_attacker" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_attacker"]
position = Vector2( 0.5, 8 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 6, 6 )
frames = SubResource( 4 )
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -28, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 60, 1 )
collision_mask = 2

[connection signal="body_entered" from="Player_Checker" to="." method="_on_Player_Checker_body_entered"]
[connection signal="body_exited" from="Player_Checker" to="." method="_on_Player_Checker_body_exited"]
[connection signal="body_entered" from="Player_attacker" to="." method="_on_Player_attacker_body_entered"]
[connection signal="body_exited" from="Player_attacker" to="." method="_on_Player_attacker_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
